
This document provides a high-level view of the changes to {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

=== Added

* run test suite on Windows using AppVeyor (#32)
* don't crash when empty comment occurs under primary text of list item
* convert <mark> phrase
* convert a bare <div> as a paragraph

=== Changed

* add code role to codespan if enclosed in quotes (required for AsciiDoc to parse properly) (#29)
* use unconstrained codespan if bounded on either side by a smart quote
* ignore auto-generated ID if heading has an explicit inline anchor

== 1.0.0.alpha.10 (2018-07-16) - @mojavelinux

=== Added

* add --auto-id-prefix CLI option to set the prefix added to all auto-generated section title IDs (#26)
* add :auto_links API option and --no-auto-links CLI option to control whether bare URLs are converted into links

=== Changed

* escape codespan text using passthrough if it contains a URL
* add blank line after list item that contains a table
* reset list level inside delimited block (e.g., quote block)
* move list level handling into writer

=== Fixed

* insert blank line above list continuation to attach to parent list item (#27)

== 1.0.0.alpha.9 (2018-07-10) - @mojavelinux

=== Changed

* escape codespan using pass macro if text contains double plus
* add specialcharacters replacement to inline pass macro
* don't add newline after period at start of line when producing ventilated prose
* use :imagesdir API option or --imagesdir CLI option to set implicit imagesdir instead of attribute

== 1.0.0.alpha.8 (2018-07-03) - @mojavelinux

=== Added

* add support for Ruby 2.3; add to CI matrix

=== Changed

* don't escape double hyphen in codespan unless surrounded by spaces or word chars
* treat leading specialchar (<, >, or &) as a word character (since it gets converted to a char reference)

== 1.0.0.alpha.7 (2018-07-02) - @mojavelinux

=== Added
